python-backend/python-k8s-resource-defins/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: python-backend
  namespace: ai-tools
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      # match: Host(`your-domain-name`) && PathPrefix(`/api/python`)

      # Remove Host(`your-domain-name`) if you don't set a DNS
      # record for the ExternalIP and your own domain
      match: PathPrefix(`/api/python`)
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: python-backend
          port: 8088
          scheme: http
